deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clusterscape
  labels: { app: clusterscape }
spec:
  selector: { app: clusterscape }
  ports:
    - { name: http, port: 80, targetPort: http }
